client/src/components/layout/style.css
.tool-button {
    width: 60px !important;
    cursor: pointer;
    height: 60px;
}

.tool-button:hover {
    border:none;
    outline:none;
    /* box-shadow: none; */
    background-color: #4C94CE !important;
}

#image {
    background-color: #A0A0A0;
    border: none;
    outline: none;
    box-shadow: none;
}

#image:hover {
    border:none;
    outline:none;
    box-shadow: none;
    background-color: #4C94CE !important;
}


#eraser {
    background-color: #A0A0A0;
    border: none;
    outline: none;
    box-shadow: none;
}

#eraser:hover {
    border:none;
    outline:none;
    box-shadow: none;
    background-color: #4C94CE !important;
}

#penWidth {
    background-color: #4C94CE;
    border: none;
    outline: none;
    box-shadow: none;
}

#penWidth:hover {
    border:none;
    outline:none;
    box-shadow: none;
    background-color: #4C94CE !important;
}

#penRight {
    display: block;
}

#palette {
    background-color: #A0A0A0;
    border: none;
    outline: none;
    box-shadow: none;
}

#palette:hover {
    border:none;
    outline:none;
    box-shadow: none;
    background-color: #4C94CE !important;
}

#undo {
    background-color: #A0A0A0;
    border: none;
    outline: none;
    box-shadow: none;
    box-sizing: none;
}

#undo:hover {
    border:none;
    outline:none;
    box-shadow: none;
    background-color: #4C94CE !important;
}

#zoomIn {
    background-color: #A0A0A0;
    border: none;
    outline: none;
    box-shadow: none;
}

#zoomIn:hover {
    border:none;
    outline:none;
    box-shadow: none;
    background-color: #4C94CE !important;
}


#zoomOut {
    background-color: #A0A0A0;
    border: none;
    outline: none;
    box-shadow: none;
}

#zoomOut:hover {
    border:none;
    outline:none;
    box-shadow: none;
    background-color: #4C94CE !important;
}

#draw {
    background-color: #A0A0A0;
    border: none;
    outline: none;
    box-shadow: none;
}

#draw:hover {
    border:none;
    outline:none;
    box-shadow: none;
    background-color: #4C94CE !important;
}

#drag {
    background-color: #A0A0A0;
    border: none;
    outline: none;
    box-shadow: none;
    border-radius: 0px;
}

#drag:hover {
    border:none;
    outline:none;
    box-shadow: none;
    background-color: #4C94CE !important;
}

.fa-2x {
  font-size: 1.5em !important;
}

.fas {
    margin-top: auto;
}

.card {
    user-select: none;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

.canvasList {
    -ms-overflow-style: none;
    scrollbar-width: none;
}
.canvasList::-webkit-scrollbar {
    display: none;
}

.popover:not(.colorPopover) {
    left: -8px !important;
    width: 200px;
    height: 60px;
    border-radius: 0px 15px 15px 0px !important;
    background-color: rgba(186, 184, 185, 0.8) !important;
    padding: 0px 10px;
    box-shadow: 2px 2px 6px rgba(139, 139, 139, 0.5) !important;
}

.colorPopover {
    left: -8px !important;
    top: 15px !important;
    background-color: rgba(186, 184, 185, 0.8) !important;
    padding: 10px;
    border-radius: 0px 15px 15px 15px !important;
    box-shadow: 2px 2px 6px rgba(139, 139, 139, 0.5) !important;
}


.rangeslider__fill { background-color: #639BD4 !important; }

.rangeslider__handle:after {
    content: initial !important;
}

.rangeslider {
    height: 5px;
    margin-top: 27px;
    margin-bottom: auto;
    position: relative;
    background: #8B898A;
    -ms-touch-action: none;
    touch-action: none;
}

.fa-chevron-right {
    position: absolute;
    left: 47px;
    top: 40px;
    font-size: 0.75em !important;
    display: none;
}

